[tool.poetry]
name = "separate"
version = "0.1.0"
description = ""
authors = ["MaksimEvdokimov <maksorli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fiona = "^1.9.6"
shapely = "^2.0.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
